# kitty-3

./: kitties_expanded.rs  node_expanded.rs
node/src/: chain_spec.rs
pallets/kitties/: Cargo.toml  Cargo2.toml  Cargo_fails.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/template/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
