[package]
name = 'kitties'
version = '3.0.0'
authors = ['Brandon Macer']
edition = '2018'

[dependencies]
codec = { version = '2.0.0', default-features = false, package = 'parity-scale-codec' }
frame-system = { version = '3.0.0', default-features = false }
frame-support = { version = '3.0.0', default-features = false }
sp-io = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'pallet-randomness-collective-flip/std',
]